# advent-of-code-24

./: .gitignore  README.md  day-3-pt2.py  pyproject.toml
day-01/: part1.py  part2.py
day-02/: part1.py  part2.py
day-03/: part1.py  part2.py
day-04/: maybe-part2.py  part1.py  part2.py
day-05/: part1.py  part2.py
day-06/: part1.py  part2.py
day-07/: part1.py  part2.py
day-08/: part1.py  part2.py
day-09/: notes.txt  part1.py  part2-ll.py  part2.py
day-10/: part1.py  part2.py
day-11/: part1.py  part2.py
day-12/: notes.txt  part1.py  part2.py
day-13/: part1.py  part2.py
day-14/: part1.py  part2.py
day-15/: debug.txt  part1.py  part2.py
day-16/: part1.py  part2.py
day-17/: notes.txt  part1.py  part2.py
day-18/: part1.py  part2.py
day-19/: part1.py  part2.py
day-20/: part1.py  part2.py  sample.txt
day-21/: notes.txt  part1.py  part2.py
day-22/: part1.py  part2.py
day-23/: part1.py  part2.py
day-24/: input-mod.txt  input-z15-fix.txt  input-z35-fix.txt  part1.py  part2.py
