[tool.poetry]
name = "advent-of-code-24"
version = "0.1.0"
description = ""
authors = ["olivier <olibitter@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
